homepage . for netlify

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "socketreact",
   "version": "0.1.0",
-  "homepage": "https://pkboe.github.io/socketreact",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
